[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-pipeline-poc"
version = "0.1.0"
description = "A tiny LangGraph audit pipeline for learning agent engineering."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0",
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
